# Cell-DEVS-Hoya

./: .gitignore  CMakeLists.txt  README.md
config/: default_scenario.json
model/: hoya_coupled.hpp
model/cells/: hoya_cell.hpp
src/: main.cpp
